--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -86,12 +86,12 @@ body.signup {
   color: #888;
 
   .container .btn {
-    background: #232323;
+    background: #333;
     border-radius: 0;
     text-shadow: none;
     border: 0;
     box-shadow: none;
-    color: #727272;
+    color: #ccc;
 
     &:hover, &:active {
       background: #AAAAAA;
