--- a/site/app/views/product/express.html.haml
+++ b/site/app/views/product/express.html.haml
@@ -1,43 +1,48 @@
+- content_for :nav_class, ' lift-counter'
 - content_for :header do
   .messaging.messaging-home
     .container
-      %h1.primary.headline
-        Shift your 
-        %strong#technology-rotate App
-        to the Cloud
-      %h2.secondary OpenShift Express will give you a fast on-ramp to the Cloud. 
+      .primary.headline
+        Our
+        %strong#technology-rotate shared
+        cloud solution
+      .secondary Express is a free, cloud-based application platform for Java, Perl, PHP, Python, and Ruby applications. 
+
+  = take_action new_web_user_path, 'Sign up to try <strong>OpenShift Express</strong>'
 
 %h1.ribbon
   .ribbon-content What is OpenShift Express?
   .ribbon-left
   
-%h2
-  OpenShift Express will give you a fast on-ramp to the Cloud. 
-  Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>PHP</strong>, <strong>Perl</strong> and 
-  <strong>Python</strong> apps in the cloud with the command-line and <strong>Git</strong> in just a few minutes. 
-  
-.row
-  .span4
-    = render 'product/video_embed', :video => 'express_client_tools', :width => 311, :height => 255
-  .span4
-    = render 'product/video_embed', :video => 'express_create_app', :width => 311, :height => 255
-  .span4
-    = render 'product/video_embed', :video => 'express_deploy', :width => 311, :height => 255
-.row
-  .span4
-    %h2
-      Install
-    %p
-      Download and install the OpenShift Express client tools so you can deploy and manage your application in the cloud.  
-  .span4
-    %h2
-      Create
-    %p
-      Create a subdomain for your application and clone the Git master repository from the cloud.
-  .span4
-    %h2
-      Deploy
-    %p
-      Add your application code to the Git repository and push to the cloud. Congratulations, your application is live!
+%section
 
-%section= take_action '/app/user/new/express', 'Ready to get started?', 'Sign up to try Express'
+  %h2
+    OpenShift Express will give you a fast on-ramp to the Cloud. 
+    Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>PHP</strong>, <strong>Perl</strong> and 
+    <strong>Python</strong> apps in the cloud with the command-line and <strong>Git</strong> in just a few minutes. 
+    
+  .row
+    .span4
+      = render 'product/video_embed', :video => 'express_client_tools', :width => 311, :height => 255
+    .span4
+      = render 'product/video_embed', :video => 'express_create_app', :width => 311, :height => 255
+    .span4
+      = render 'product/video_embed', :video => 'express_deploy', :width => 311, :height => 255
+  .row
+    .span4
+      %h2
+        Install
+      %p
+        Download and install the OpenShift Express client tools so you can deploy and manage your application in the cloud.  
+    .span4
+      %h2
+        Create
+      %p
+        Create a subdomain for your application and clone the Git master repository from the cloud.
+    .span4
+      %h2
+        Deploy
+      %p
+        Add your application code to the Git repository and push to the cloud. Congratulations, your application is live!
+  
+  %section= take_action '/app/user/new/express', 'Ready to get started?', 'Sign up to try Express'
