--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -50,6 +50,7 @@
         font-weight: bold;
         /* reset styles */
         padding: 5px 0;
+        border-radius: 0;
       }
     }
 
@@ -65,6 +66,12 @@
       border: 0;
       box-shadow: none;
       text-decoration: underline;
+    }
+    
+    > li > a:focus {
+    	outline: thin dotted;
+  		outline: 5px auto -webkit-focus-ring-color;
+  		outline-offset: 12px;
     }
   }
 }
