--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -49,17 +49,19 @@
               %strong Namespace
               %p
                 Because this is your first application, you need to set a name under which your applications will be grouped
-    .control-group
-      %label{:for => :gear_size_profile, :class => "control-label"} Gear Size
-      = f.input :gear_size_profile, :collection => options_for_select(@gear_sizes, @gear_sizes[0]), :include_blank => false, :class => @application.errors[:node_profile].present? ? 'error' : '', :label => false
-      .row
-        .controls
-          .help-block.span6
-            Different gear sizes may be available for your application.  For most
-            application the
-            %strong small
-            gear size provides plenty of resources to run in.  If you require
-            more resources you may change it here.
+    - if @gear_sizes and @gear_sizes.length > 1
+      .control-group
+        %label{:for => :gear_size_profile, :class => "control-label"} Gear Size
+        = f.input :gear_size_profile, :collection => options_for_select(@gear_sizes, @gear_sizes[0]), :include_blank => false, :class => @application.errors[:node_profile].present? ? 'error' : '', :label => false
+        .row
+          .controls
+            .help-block.span6
+              Different gear sizes may be available for your application.  For most
+              application the
+              %strong small
+              gear size provides plenty of resources to run in.  If you require
+              more resources you may change it here.
+
 
   = f.buttons do
     = link_to "Back", application_types_path, :class => 'btn'
