--- a/site/app/views/layouts/_flashes.html.haml
+++ b/site/app/views/layouts/_flashes.html.haml
@@ -1,4 +1,6 @@
-#flash
-  - flash.each do |key, value|
-    .message{ :class => key }
-      %p= value
+- unless flash.empty?
+  #flash
+    - flash.each do |key, value|
+      - unless value.nil?
+        %div{ :class => alert_class_for(key) }
+          = value
